2008-09-08  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Fix the retries.
	
2008-09-08  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Make sure checkouts and updates don't fail and try again when they
	do.
	
2008-09-04  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/CVSParser.py:

	Fix info regexp in CVS parser. It seems some versions of CVS add a
	trailing ';'
	
2008-09-04  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/Database.py:

	Use longtext instead of text as type for message field in scmlog
	table. It seems there are people who write very long commit
	messages.
	
2008-09-04  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/CVSParser.py:

	Include also the commit message in CVS repos. Definitely fixes bug
	#364.
	
2008-09-03  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/CVSParser.py:

	Detect files added on a branch.
	
2008-09-03  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Use the composed revision to identify a single action in cvs.
	
2008-09-03  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/CVSParser.py:

	Remove 'Attic' also from the composed revision in cvs.
	
2008-09-03  Santiago Dueñas Domínguez  <sduenas@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	'revision per files' query ordered by commit date.

2008-09-03  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/CVSParser.py:

	Remove 'Attic' from the path of deleted files.
	
2008-09-03  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/main.py:

	Enable repository handler debug when running cvsanaly in debug
	mode.
	
2008-09-03  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/CVSParser.py:

	Ignore useless 1.1.1.1 revisions in CVS and register 1.1 revisions
	as new files.
